lib/src/duckdb_bindings.dart


  late final _duckdb_data_chunk_get_vectorPtr = _lookup<
          ffi.NativeFunction<duckdb_vector Function(duckdb_data_chunk, idx_t)>>(
      'duckdb_data_chunk_get_vector');
  late final _duckdb_data_chunk_get_vector = _duckdb_data_chunk_get_vectorPtr
      .asFunction<duckdb_vector Function(duckdb_data_chunk, int)>();

  int duckdb_data_chunk_get_size(
    duckdb_data_chunk chunk,
  ) {
    return _duckdb_data_chunk_get_size(
      chunk,
    );
  }

  late final _duckdb_data_chunk_get_sizePtr =
      _lookup<ffi.NativeFunction<idx_t Function(duckdb_data_chunk)>>(
          'duckdb_data_chunk_get_size');
  late final _duckdb_data_chunk_get_size = _duckdb_data_chunk_get_sizePtr
      .asFunction<int Function(duckdb_data_chunk)>();

  void duckdb_data_chunk_set_size(
    duckdb_data_chunk chunk,
    int size,
  ) {
    return _duckdb_data_chunk_set_size(
      chunk,
      size,
    );
  }

  late final _duckdb_data_chunk_set_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(duckdb_data_chunk, idx_t)>>(
          'duckdb_data_chunk_set_size');
  late final _duckdb_data_chunk_set_size = _duckdb_data_chunk_set_sizePtr
      .asFunction<void Function(duckdb_data_chunk, int)>();

  duckdb_logical_type duckdb_vector_get_column_type(
    duckdb_vector vector,
  ) {
    return _duckdb_vector_get_column_type(
      vector,
    );
  }

  late final _duckdb_vector_get_column_typePtr =
      _lookup<ffi.NativeFunction<duckdb_logical_type Function(duckdb_vector)>>(
          'duckdb_vector_get_column_type');
  late final _duckdb_vector_get_column_type = _duckdb_vector_get_column_typePtr
      .asFunction<duckdb_logical_type Function(duckdb_vector)>();

  ffi.Pointer<ffi.Void> duckdb_vector_get_data(
    duckdb_vector vector,
  ) {
    return _duckdb_vector_get_data(
      vector,
    );
  }

  late final _duckdb_vector_get_dataPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(duckdb_vector)>>(
      'duckdb_vector_get_data');
  late final _duckdb_vector_get_data = _duckdb_vector_get_dataPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(duckdb_vector)>();

  ffi.Pointer<ffi.Uint64> duckdb_vector_get_validity(
    duckdb_vector vector,
  ) {
    return _duckdb_vector_get_validity(
      vector,
    );
  }

  late final _duckdb_vector_get_validityPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Uint64> Function(duckdb_vector)>>(
      'duckdb_vector_get_validity');
  late final _duckdb_vector_get_validity = _duckdb_vector_get_validityPtr
      .asFunction<ffi.Pointer<ffi.Uint64> Function(duckdb_vector)>();

  void duckdb_vector_ensure_validity_writable(
    duckdb_vector vector,
  ) {
    return _duckdb_vector_ensure_validity_writable(
      vector,
    );
  }

  late final _duckdb_vector_ensure_validity_writablePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(duckdb_vector)>>(
          'duckdb_vector_ensure_validity_writable');
  late final _duckdb_vector_ensure_validity_writable =
      _duckdb_vector_ensure_validity_writablePtr
          .asFunction<void Function(duckdb_vector)>();

  void duckdb_vector_assign_string_element(
    duckdb_vector vector,
    int index,
    ffi.Pointer<ffi.Char> str,
  ) {
    return _duckdb_vector_assign_string_element(
      vector,
      index,
      str,
    );
  }

  late final _duckdb_vector_assign_string_elementPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(duckdb_vector, idx_t,
              ffi.Pointer<ffi.Char>)>>('duckdb_vector_assign_string_element');
  late final _duckdb_vector_assign_string_element =
      _duckdb_vector_assign_string_elementPtr.asFunction<
          void Function(duckdb_vector, int, ffi.Pointer<ffi.Char>)>();

  void duckdb_vector_assign_string_element_len(
    duckdb_vector vector,
    int index,
    ffi.Pointer<ffi.Char> str,
    int str_len,
  ) {
    return _duckdb_vector_assign_string_element_len(
      vector,
      index,
      str,
      str_len,
    );
  }

  late final _duckdb_vector_assign_string_element_lenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(duckdb_vector, idx_t, ffi.Pointer<ffi.Char>,
              idx_t)>>('duckdb_vector_assign_string_element_len');
  late final _duckdb_vector_assign_string_element_len =
      _duckdb_vector_assign_string_element_lenPtr.asFunction<
          void Function(duckdb_vector, int, ffi.Pointer<ffi.Char>, int)>();

  duckdb_vector duckdb_list_vector_get_child(
    duckdb_vector vector,
  ) {
    return _duckdb_list_vector_get_child(
      vector,
    );
  }

  late final _duckdb_list_vector_get_childPtr =
      _lookup<ffi.NativeFunction<duckdb_vector Function(duckdb_vector)>>(
          'duckdb_list_vector_get_child');
  late final _duckdb_list_vector_get_child = _duckdb_list_vector_get_childPtr
      .asFunction<duckdb_vector Function(duckdb_vector)>();

  int duckdb_list_vector_get_size(
    duckdb_vector vector,
  ) {
    return _duckdb_list_vector_get_size(
      vector,
    );
  }

  late final _duckdb_list_vector_get_sizePtr =
      _lookup<ffi.NativeFunction<idx_t Function(duckdb_vector)>>(
          'duckdb_list_vector_get_size');
  late final _duckdb_list_vector_get_size =
      _duckdb_list_vector_get_sizePtr.asFunction<int Function(duckdb_vector)>();

  duckdb_vector duckdb_struct_vector_get_child(
    duckdb_vector vector,
    int index,
  ) {
    return _duckdb_struct_vector_get_child(
      vector,
      index,
    );
  }

  late final _duckdb_struct_vector_get_childPtr =
      _lookup<ffi.NativeFunction<duckdb_vector Function(duckdb_vector, idx_t)>>(
          'duckdb_struct_vector_get_child');
  late final _duckdb_struct_vector_get_child =
      _duckdb_struct_vector_get_childPtr
          .asFunction<duckdb_vector Function(duckdb_vector, int)>();

  bool duckdb_validity_row_is_valid(
    ffi.Pointer<ffi.Uint64> validity,
    int row,
  ) {
    return _duckdb_validity_row_is_valid(
      validity,
      row,
    );
  }

  late final _duckdb_validity_row_is_validPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<ffi.Uint64>, idx_t)>>('duckdb_validity_row_is_valid');
  late final _duckdb_validity_row_is_valid = _duckdb_validity_row_is_validPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Uint64>, int)>();

  void duckdb_validity_set_row_validity(
    ffi.Pointer<ffi.Uint64> validity,
    int row,
    bool valid,
  ) {
    return _duckdb_validity_set_row_validity(
      validity,
      row,
      valid,
    );
  }

  late final _duckdb_validity_set_row_validityPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Uint64>, idx_t,
              ffi.Bool)>>('duckdb_validity_set_row_validity');
  late final _duckdb_validity_set_row_validity =
      _duckdb_validity_set_row_validityPtr
          .asFunction<void Function(ffi.Pointer<ffi.Uint64>, int, bool)>();

  void duckdb_validity_set_row_invalid(
    ffi.Pointer<ffi.Uint64> validity,
    int row,
  ) {
    return _duckdb_validity_set_row_invalid(
      validity,
      row,
    );
  }

  late final _duckdb_validity_set_row_invalidPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Uint64>,
              idx_t)>>('duckdb_validity_set_row_invalid');
  late final _duckdb_validity_set_row_invalid =
      _duckdb_validity_set_row_invalidPtr
          .asFunction<void Function(ffi.Pointer<ffi.Uint64>, int)>();

  void duckdb_validity_set_row_valid(
    ffi.Pointer<ffi.Uint64> validity,
    int row,
  ) {
    return _duckdb_validity_set_row_valid(
      validity,
      row,
    );
  }

  late final _duckdb_validity_set_row_validPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Uint64>,
              idx_t)>>('duckdb_validity_set_row_valid');
  late final _duckdb_validity_set_row_valid = _duckdb_validity_set_row_validPtr
      .asFunction<void Function(ffi.Pointer<ffi.Uint64>, int)>();

  duckdb_table_function duckdb_create_table_function() {
    return _duckdb_create_table_function();
  }

  late final _duckdb_create_table_functionPtr =
      _lookup<ffi.NativeFunction<duckdb_table_function Function()>>(
          'duckdb_create_table_function');
  late final _duckdb_create_table_function = _duckdb_create_table_functionPtr
      .asFunction<duckdb_table_function Function()>();

  void duckdb_destroy_table_function(
    ffi.Pointer<duckdb_table_function> table_function,
  ) {
    return _duckdb_destroy_table_function(
      table_function,
    );
  }

  late final _duckdb_destroy_table_functionPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<duckdb_table_function>)>>(
      'duckdb_destroy_table_function');
  late final _duckdb_destroy_table_function = _duckdb_destroy_table_functionPtr
      .asFunction<void Function(ffi.Pointer<duckdb_table_function>)>();

  void duckdb_table_function_set_name(
    duckdb_table_function table_function,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _duckdb_table_function_set_name(
      table_function,
      name,
    );
  }

  late final _duckdb_table_function_set_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(duckdb_table_function,
              ffi.Pointer<ffi.Char>)>>('duckdb_table_function_set_name');
  late final _duckdb_table_function_set_name =
      _duckdb_table_function_set_namePtr.asFunction<
          void Function(duckdb_table_function, ffi.Pointer<ffi.Char>)>();

  void duckdb_table_function_add_parameter(
    duckdb_table_function table_function,
    duckdb_logical_type type,
  ) {
    return _duckdb_table_function_add_parameter(
      table_function,
      type,
    );
  }

  late final _duckdb_table_function_add_parameterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(duckdb_table_function,
              duckdb_logical_type)>>('duckdb_table_function_add_parameter');
  late final _duckdb_table_function_add_parameter =
      _duckdb_table_function_add_parameterPtr.asFunction<
          void Function(duckdb_table_function, duckdb_logical_type)>();

  void duckdb_table_function_set_extra_info(
    duckdb_table_function table_function,
    ffi.Pointer<ffi.Void> extra_info,
    duckdb_delete_callback_t destroy,
  ) {
    return _duckdb_table_function_set_extra_info(
      table_function,
      extra_info,
      destroy,
    );
  }

  late final _duckdb_table_function_set_extra_infoPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(duckdb_table_function, ffi.Pointer<ffi.Void>,
                  duckdb_delete_callback_t)>>(
      'duckdb_table_function_set_extra_info');
  late final _duckdb_table_function_set_extra_info =
      _duckdb_table_function_set_extra_infoPtr.asFunction<
          void Function(duckdb_table_function, ffi.Pointer<ffi.Void>,
              duckdb_delete_callback_t)>();

  void duckdb_table_function_set_bind(
    duckdb_table_function table_function,
    duckdb_table_function_bind_t bind,
  ) {
    return _duckdb_table_function_set_bind(
      table_function,
      bind,
    );
  }

  late final _duckdb_table_function_set_bindPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(duckdb_table_function,
              duckdb_table_function_bind_t)>>('duckdb_table_function_set_bind');
  late final _duckdb_table_function_set_bind =
      _duckdb_table_function_set_bindPtr.asFunction<
          void Function(duckdb_table_function, duckdb_table_function_bind_t)>();

  void duckdb_table_function_set_init(
    duckdb_table_function table_function,
    duckdb_table_function_init_t init,
  ) {
    return _duckdb_table_function_set_init(
      table_function,
      init,
    );
  }
